--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.2",
+    "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.12",
     "tw-elements-react": "^1.0.0-alpha-end",
     "web-vitals": "^2.1.4"
   },
